# x402Warden-Solana

./: .env.example  .gitignore  .mcp.json  .vercelignore  Anchor.toml  Cargo.toml  LICENSE  PLAN-CLI-PROXY.md  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
cli/: package.json
dashboard/: .env.example  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
demo/: README.md
demo/agent/: README.md  pyproject.toml
demo/agent/src/: agent.py  solana_helpers.py  x402_client.py
docs/: architecture.md  demo.md  policies.md  production-readiness.md  protection-models.md  sdk.md
mcp/: README.md  package.json  tsconfig.json
programs/x402warden/: Cargo.toml
programs/x402warden/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/x402warden/src/instructions/: add_merchant.rs  auto_refund.rs  create_allowlist.rs  initialize_agent.rs  merchant_accept.rs  merchant_contest.rs  mod.rs  open_dispute.rs  pause.rs  process_payment.rs  record_payment_evidence.rs  remove_merchant.rs  set_policy.rs  settle_payment.rs  unpause.rs
programs/x402warden/src/state/: agent.rs  allowlist.rs  dispute.rs  escrow.rs  mod.rs  payment_evidence.rs  policy.rs
proxy/: package.json  tsconfig.json
scripts/: deploy_devnet.sh  seed_demo.ts  start_local.sh
sdk/: package.json  tsconfig.json
tests/: 01_initialize_agent.ts  02_set_policy.ts  03_merchant_allowlist.ts  04_process_payment.ts  05_settle_payment.ts  06_dispute_flow.ts  07_pause_unpause.ts  08_error_cases.ts  09_auto_refund.ts  10_delivery_evidence.ts  11_blocked_payment_receipts.ts  (+8 more)
(+106 files in other folders)
