[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x402warden-demo-agent"
version = "0.1.0"
description = "Demo AI agent for x402warden — Solana payment guardrails"
requires-python = ">=3.10"
dependencies = [
    "solana>=0.34",
    "solders>=0.21",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
anchor = ["anchorpy>=0.20"]
