[package]
name = "x402-warden"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "x402_warden"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-bpf = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
